fix building problems